Fix new_parser_from_tts call

--- a/quasi_tests/tests/test.rs.in
+++ b/quasi_tests/tests/test.rs.in
@@ -30,10 +30,9 @@ fn make_ext_ctxt<'a>(sess: &'a parse::ParseSess,
         }
     };
 
-    let cfg = Vec::new();
     let ecfg = expand::ExpansionConfig::default(String::new());
 
-    let mut cx = ExtCtxt::new(&sess, cfg, ecfg, macro_loader);
+    let mut cx = ExtCtxt::new(&sess, ecfg, macro_loader);
     cx.bt_push(info);
 
     cx
