--- a/quasi/Cargo.toml
+++ b/quasi/Cargo.toml
@@ -12,6 +12,6 @@ with-syntex = ["syntex_syntax", "syntex_errors"]
 unstable-testing = ["clippy"]
 
 [dependencies]
-clippy = { version = "^0.*", optional = true }
-syntex_errors = { version = "^0.55.0", optional = true }
-syntex_syntax = { version = "^0.55.0", optional = true }
+clippy = { version = "0.*", optional = true }
+syntex_errors = { version = "0.57", optional = true }
+syntex_syntax = { version = "0.57", optional = true }
