--- a/quasi_codegen/Cargo.toml
+++ b/quasi_codegen/Cargo.toml
@@ -13,8 +13,8 @@ with-syntex = ["syntex", "syntex_errors", "syntex_syntax", "aster/with-syntex"]
 unstable-testing = ["clippy"]
 
 [dependencies]
-aster = { version = "^0.39.0", default-features = false }
-clippy = { version = "^0.*", optional = true }
-syntex = { version = "^0.55.0", optional = true }
-syntex_errors = { version = "^0.55.0", optional = true }
-syntex_syntax = { version = "^0.55.0", optional = true }
+aster = { version = "0.40", default-features = false }
+clippy = { version = "0.*", optional = true }
+syntex = { version = "0.57", optional = true }
+syntex_errors = { version = "0.57", optional = true }
+syntex_syntax = { version = "0.57", optional = true }
