--- a/quasi_macros/Cargo.toml
+++ b/quasi_macros/Cargo.toml
@@ -15,9 +15,9 @@ plugin = true
 unstable-testing = ["clippy", "quasi/unstable-testing", "quasi_codegen/unstable-testing"]
 
 [dependencies]
-clippy = { version = "^0.*", optional = true }
-quasi_codegen = { version = "^0.30.0", path = "../quasi_codegen", default-features = false }
+clippy = { version = "0.*", optional = true }
+quasi_codegen = { version = "0.30", path = "../quasi_codegen", default-features = false }
 
 [dev-dependencies]
-aster = "^0.39.0"
-quasi = { version = "^0.30.0", path = "../quasi" }
+aster = "0.40"
+quasi = { version = "0.30", path = "../quasi" }
